Aula 14.04 inclusão de duas seções e imagens
Aula 3 Continuação dos códigos

--- a/index.html
+++ b/index.html
@@ -17,9 +17,31 @@
         <ul class="cabecalho-lista">
             <li class="cabecalho-item">instituição</li>
             <li class="cabecalho-item">Estudantes</li>
-           
+
         </ul>
     </header>
+    <section class="pergunta">
+        <img class="pergunta-imagem" src="Quem é você 1.png" alt="homem-espelho">
+        <div class="pergunta-div-h2-p">
+            <h2 class="pergunta-titulo">Quem é você?</h2>
+            <p class="pergunta-tilulo">Conhecer a si mesmo é o primeiro passo para começar a viver!</p>
+        </div>
+    </section>
+    <section class="autores">
+        <h3>Pricipais autores para a vida:</h3>
+        <div class="autores-div-schopenhuaer">
+            <img class="autores-img-autor" src="Shopenhauer 1.png" alt="Schopenhauer">
+            <img class="autores-img-livro" src="livro 1.png" alt="livro">
+            <img src="Biografia 1.png" alt="biografia">
+            <p>Schopenhauer</p>
+        </div>
+        <div class="autores-div-schopenhuaer">
+            <img class="autores-img-autor" src="nietche 1.png" alt="Nietche">
+            <img class="autores-img-livro" src="livro 1.png" alt="livro">
+            <img src="Biografia 1.png" alt="biografia">
+            <p>nietzsche</p>
+        </div>
+    </section>
 </body>
 
 </html>
